Add Commands to add Languages and Translations